fix header spacing for small tablet

--- a/css/main.css
+++ b/css/main.css
@@ -122,7 +122,7 @@ a {
     }
 
     header {
-        width:48em;
+        width:26em;
     }
     .title-group {
         display: flex;
